applications/prod/qbittorrent/path.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  template:
    spec:
      containers:
        - image: linuxserver/qbittorrent:20.04.1 # {"$imagepolicy": "flux-system:qbittorrent"}
          name: qbittorrent
