applications/prod/qbittorrent/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
  hostnames:
    - qbittorrent.${cluster_subdomain}
  rules:
    - backendRefs:
        - name: qbittorrent
          port: 8080
